--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "mockjs": "^1.1.0",
     "pinia": "^2.0.36",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.3.2",
@@ -25,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/jsdom": "^21.1.1",
+    "@types/mockjs": "^1.0.7",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
@@ -42,6 +45,7 @@
     "sass": "^1.62.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
+    "vite-plugin-mock": "^3.0.0",
     "vitest": "^0.31.0",
     "vue-tsc": "^1.6.4"
   }
