--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-    "**/!(dist)/*.{js,ts,tsx,jsx,vue,scss,css}": [
+    "**/*.{js,ts,tsx,jsx,vue,scss,css}": [
         "prettier --write \"src/**/*.ts\" \"src/**/*.vue\"",
         "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix"
     ]    
