--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@microsoft/signalr": "^7.0.9",
     "axios": "^1.4.0",
+    "element-plus": "^2.3.8",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.3",
     "pinia-plugin-persistedstate": "^3.1.0",
@@ -24,6 +27,7 @@
     "vuewebtemplate": "link:"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.11",
     "@playwright/test": "^1.34.3",
     "@rushstack/eslint-patch": "^1.3.0",
     "@tsconfig/node18": "^2.0.1",
@@ -45,6 +49,9 @@
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "typescript": "~5.0.4",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.16.5",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^3.2.7",
     "vite-plugin-mock": "^2.9.6",
     "vitest": "^0.31.1",
